@@ -2,6 +2,21 @@ module ActiveMerchant #:nodoc:
   module Billing #:nodoc:
     # Convenience methods that can be included into a custom Credit Card object, such as an ActiveRecord based Credit Card object.
     module CreditCardMethods
+      CARD_COMPANIES = { 
+        'visa'               => /^4\d{12}(\d{3})?$/,
+        'master'             => /^(5[1-5]\d{4}|677189)\d{10}$/,
+        'discover'           => /^6011\d{12}$/,
+        'american_express'   => /^3[47]\d{13}$/,
+        'diners_club'        => /^3(0[0-5]|[68]\d)\d{11}$/,
+        'jcb'                => /^3528\d{12}$/,
+        'switch'             => /^6759\d{12}(\d{2,3})?$/,  
+        'solo'               => /^6767\d{12}(\d{2,3})?$/,
+        'dankort'            => /^5019\d{12}$/,
+        'maestro'            => /^(5[06-8]|6\d)\d{14}$/,
+        'forbrugsforeningen' => /^600722\d{10}$/,
+        'laser'              => /^(6304[89]\d{11}(\d{2,3})?|670695\d{12})$/
+      }
+    
       def self.included(base)
         base.extend(ClassMethods)
       end
@@ -41,20 +56,7 @@ module ActiveMerchant #:nodoc:
         # - http://en.wikipedia.org/wiki/Credit_card_number 
         # - http://www.barclaycardbusiness.co.uk/information_zone/processing/bin_rules.html 
         def card_companies
-          { 
-            'visa'               => /^4\d{12}(\d{3})?$/,
-            'master'             => /^(5[1-5]\d{4}|677189)\d{10}$/,
-            'discover'           => /^6011\d{12}$/,
-            'american_express'   => /^3[47]\d{13}$/,
-            'diners_club'        => /^3(0[0-5]|[68]\d)\d{11}$/,
-            'jcb'                => /^3528\d{12}$/,
-            'switch'             => /^6759\d{12}(\d{2,3})?$/,  
-            'solo'               => /^6767\d{12}(\d{2,3})?$/,
-            'dankort'            => /^5019\d{12}$/,
-            'maestro'            => /^(5[06-8]|6\d)\d{14}$/,
-            'forbrugsforeningen' => /^600722\d{10}$/,
-            'laser'              => /^(6304[89]\d{11}(\d{2,3})?|670695\d{12})$/
-          }
+          CARD_COMPANIES
         end
         
         # Returns a string containing the type of card from the list of known information below.
